# serializer version: 1
# name: TestAdd.test
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Edited Prunus virus E',
    'diff': list([
      tuple(
        'change',
        'abbreviation',
        tuple(
          'PVF',
          '',
        ),
      ),
      tuple(
        'change',
        'name',
        tuple(
          'Prunus virus F',
          'Prunus virus E',
        ),
      ),
      tuple(
        'change',
        'version',
        tuple(
          0,
          1,
        ),
      ),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'edit',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'test',
    }),
  })
# ---
# name: TestAdd.test.1
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Edited Prunus virus E',
    'diff': list([
      list([
        'change',
        'abbreviation',
        list([
          'PVF',
          '',
        ]),
      ]),
      list([
        'change',
        'name',
        list([
          'Prunus virus F',
          'Prunus virus E',
        ]),
      ]),
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'edit',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'test',
    }),
  })
# ---
# name: TestAdd.test_create
  dict({
    '_id': '6116cba1.0',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Created Prunus virus F',
    'diff': dict({
      '_id': '6116cba1',
      'abbreviation': 'PVF',
      'imported': True,
      'isolates': list([
        dict({
          'default': True,
          'isolate_id': 'cab8b360',
          'sequences': list([
            dict({
              '_id': 'KX269872',
              'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
              'host': 'sweet cherry',
              'isolate_id': 'cab8b360',
              'segment': None,
              'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
            }),
          ]),
          'source_name': '8816-v2',
          'source_type': 'isolate',
        }),
      ]),
      'last_indexed_version': 0,
      'lower_name': 'prunus virus f',
      'name': 'Prunus virus F',
      'reference': dict({
        'id': 'hxn167',
      }),
      'schema': list([
      ]),
      'version': 0,
    }),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'create',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 0,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'test',
    }),
  })
# ---
# name: TestAdd.test_create.1
  dict({
    '_id': '6116cba1.0',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Created Prunus virus F',
    'diff': dict({
      '_id': '6116cba1',
      'abbreviation': 'PVF',
      'imported': True,
      'isolates': list([
        dict({
          'default': True,
          'isolate_id': 'cab8b360',
          'sequences': list([
            dict({
              '_id': 'KX269872',
              'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
              'host': 'sweet cherry',
              'isolate_id': 'cab8b360',
              'segment': None,
              'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
            }),
          ]),
          'source_name': '8816-v2',
          'source_type': 'isolate',
        }),
      ]),
      'last_indexed_version': 0,
      'lower_name': 'prunus virus f',
      'name': 'Prunus virus F',
      'reference': dict({
        'id': 'hxn167',
      }),
      'schema': list([
      ]),
      'version': 0,
    }),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'create',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 0,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'test',
    }),
  })
# ---
# name: TestAdd.test_remove
  dict({
    '_id': '6116cba1.removed',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Removed Prunus virus F',
    'diff': dict({
      '_id': '6116cba1',
      'abbreviation': 'PVF',
      'imported': True,
      'isolates': list([
        dict({
          'default': True,
          'isolate_id': 'cab8b360',
          'sequences': list([
            dict({
              '_id': 'KX269872',
              'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
              'host': 'sweet cherry',
              'isolate_id': 'cab8b360',
              'segment': None,
              'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
            }),
          ]),
          'source_name': '8816-v2',
          'source_type': 'isolate',
        }),
      ]),
      'last_indexed_version': 0,
      'lower_name': 'prunus virus f',
      'name': 'Prunus virus F',
      'reference': dict({
        'id': 'hxn167',
      }),
      'schema': list([
      ]),
      'version': 0,
    }),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'remove',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 'removed',
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'test',
    }),
  })
# ---
# name: TestAdd.test_remove.1
  dict({
    '_id': '6116cba1.removed',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Removed Prunus virus F',
    'diff': dict({
      '_id': '6116cba1',
      'abbreviation': 'PVF',
      'imported': True,
      'isolates': list([
        dict({
          'default': True,
          'isolate_id': 'cab8b360',
          'sequences': list([
            dict({
              '_id': 'KX269872',
              'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
              'host': 'sweet cherry',
              'isolate_id': 'cab8b360',
              'segment': None,
              'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
            }),
          ]),
          'source_name': '8816-v2',
          'source_type': 'isolate',
        }),
      ]),
      'last_indexed_version': 0,
      'lower_name': 'prunus virus f',
      'name': 'Prunus virus F',
      'reference': dict({
        'id': 'hxn167',
      }),
      'schema': list([
      ]),
      'version': 0,
    }),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'remove',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 'removed',
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'test',
    }),
  })
# ---
# name: test_get_most_recent_change[False]
  None
# ---
# name: test_get_most_recent_change[True]
  dict({
    '_id': '6116cba1.2',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Description number 2',
    'method_name': 'update',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 2,
    }),
    'user': dict({
      'id': 'test',
    }),
  })
# ---
# name: test_patch_to_version[False]
  dict({
    '_id': '6116cba1',
    'abbreviation': 'TST',
    'imported': True,
    'isolates': list([
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Test Virus',
    'reference': dict({
      'id': 'hxn167',
    }),
    'schema': list([
    ]),
    'verified': False,
    'version': 3,
  })
# ---
# name: test_patch_to_version[False].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'TST',
    'imported': True,
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'sequences': list([
          dict({
            '_id': 'KX269872',
            'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
            'host': 'sweet cherry',
            'isolate_id': 'cab8b360',
            'otu_id': '6116cba1',
            'segment': None,
            'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
          }),
        ]),
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_patch_to_version[False].2
  list([
    '6116cba1.3',
    '6116cba1.2',
  ])
# ---
# name: test_patch_to_version[True]
  None
# ---
# name: test_patch_to_version[True].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'TST',
    'imported': True,
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'sequences': list([
          dict({
            '_id': 'KX269872',
            'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
            'host': 'sweet cherry',
            'isolate_id': 'cab8b360',
            'otu_id': '6116cba1',
            'segment': None,
            'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
          }),
        ]),
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_patch_to_version[True].2
  list([
    '6116cba1.removed',
    '6116cba1.3',
    '6116cba1.2',
  ])
# ---
